feat(checkout): add ticket selection start flow (#60)
